secret/secret.css
@font-face {
  font-family: 'Space Age';
  src: url('../fonts/space\ age.ttf');
}
@font-face {
    font-family: 'Neuropool';
    src: url('../fonts/Neuropol\ X\ Rg.otf');
}
:root{
 --color-three: #92DCE5;
 --color-two: #52dee5;
 --color-one:  #2DE1C2;

}
special{
    color: #B2FFA9
}
special2{
    color: #B084CC;
}
special3{
    color: #B02193
}
svg{
    pointer-events: none;
}
body{
    min-height: 100vh;
    width: 100%;
    margin: 0px;
    display: flex;
    flex-direction: column;
}
i{
    color: inherit;
}
* {
   font-family: 'Neuropool', 'Georgia', serif;
   color: var(--color-one);
   user-select: none;
}
p{
    width: fit-content;
    pointer-events: none;
}
text{
    font-size: 2em;
    display: block;
    white-space: nowrap;
    overflow: hidden;
    border-right: 0.4px solid white;
    animation: 2s 1 normal typewriter forwards linear,  blink-caret .3s step-end infinite;
}
.screen {
    width: 1400px; 
    min-height: 650px;
    height: fit-content;
    margin: auto;
    display: flex;
    flex-direction: row;
    border: 3px solid  #2e2e2e;
    border-radius: 1em;
    box-shadow: 0px 4px 8px #000000;
    padding: 2em;
    column-gap: 1em;
    transform: height 0.3s ease-in;
}
.screen img{
    margin-right: 2em;
}
img {
    width: 400px;

}
.invisible{
    visibility: hidde;
}
.screenContainer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    row-gap: 20px;
    margin: auto;
}
.screentext{
    font-size: 1em;
    white-space: wrap;
    display: block;
    height: fit-content;
    line-height: 1.7em;
}
 .closeInbox {
    width: 30px;
    height: 30px;
    padding: 0.25em;
    border-radius: 1em;
    transition: transform 0.1s ease-in;
}
.inboxLabel{

    padding: 0.25em;
    border-radius: 1em;
    column-gap: 1em;
    transition: transform 0.1s ease-in;
    border: 2px solid transparent;
}
.inboxLabel.disabled{
    z-index: -1;
}
.inboxLabel p{

    margin: 0px;
    padding: 0px;
    color: #ffffff;
}
.svgbox{
    width: 30px;
    height: 30px;
}
.nextLabel, .prevMedia, .nextMedia{
    width: 30px;
    height: 30px;
    padding: 0.5em;
    border-radius: 1em;
    transition: transform 0.1s ease-in;
}
label.inboxDisabled{
    z-index: -1;
}
.screenMediaControls{
    display: flex;
    flex-direction: row;
    column-gap: 1em;
    height: 80px;
    justify-content: space-between;
    padding-left: 2em;
    padding-right: 2em;
    width: 100px;
    margin-top: 1em;
    align-items: center;
    box-shadow: 0px 4px 8px #000000;


}
.nextLabel svg path, .prevMedia svg path, .nextMedia svg path{
    stroke: #92DCE5;
}

.nextLabel.disabled{
    pointer-events: none;
    opacity: 0.5;

}
.inboxLabel:hover{
    background-color: #000000 !important;
    border: 3px solid #2e2e2e;
    box-shadow: 0px 4px 8px #fefefe;
}
 .nextLabel:hover, .nextMedia:hover, .prevMedia:hover{
    background-color: #2e2e2e;
}
.inboxLabel:active, .closeInbox:active, .nextLabel:active, .prevMedia:hover, .nextMedia:hover {
    transform: translate(0, -4px);
}
.nextMedia:active, .prevMedia:active{
    transform: translate(0, 4px);

}
label{
    cursor: grab
}
label:active{
    cursor: grabbing
}
label.disabled{
    opacity: 0.5;
    pointer-events: none;
}
 

.messageGUI{
    display: none;
    position: fixed;
    top: 15%;
    left: 5%;
    width: 1400px;
    height: 0px;
    border: 3px solid #b9b9b9;
    border-radius: 1em;
    box-shadow: 0px 4px 8px #000000;
    background-color: #111111;
}
.messageGUI.active{
    display: flex;
    animation: 0.3s 1 normal showInbox forwards ease-out;
}
.contact{
    width: 100%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    border-top: 3px solid #2e2e2e;
    border-bottom: 3px solid #2e2e2e;
    z-index: 2;
    padding-top: 1em;
    padding-bottom: 1em;
    background-color: #111111;

}
.contact h3{
    font-size: 1.2em;
    margin: 0px;
    padding: 0px;
    pointer-events: none;
}
.contact p{
    margin: 0px;
    padding: 0px;
    font-size: 0.8em;
    pointer-events: none;

}
.contact:nth-of-type(1){
    border-bottom: none;
}
.contact:hover, .chatChoice:hover{
    background-color: #3b3b3b;
}
.contact:active, .chatChoice:active{
    background-color: #2b2b2b;
}

.contact .col{
    row-gap: 0.25em;
    pointer-events: none;
}
.contact .row{
    column-gap: 1.5em;
    pointer-events: none;
}
.contact profile{
    position: relative;
    top: 5px;
    left: 5px;
    width: 40px;
    height: 40px;
}
.row{
    display: flex;
    flex-direction: row;
}
.col{
    display: flex;
    flex-direction: column;
}
.inbox{
    display: flex;
    flex-direction: row;   
    width: 100%;
    height: 100%;
}

messagebox{
    display: flex;
    flex-direction: column;
    width: 75%;
    background-color: #111111;
    border-radius: 1em;
    border-top-left-radius: 0;
}
.chatInput{
    height:20%;
    background-color: #111111;
    border-top: 2px solid #CCE6F4;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    border-bottom-left-radius: 1em;
    border-bottom-right-radius: 1em;
}
.chatWindow{
    height:80%;
    display: flex;
    flex-direction: column;
    overflow: scroll;
    padding-bottom: 2em;
    padding-top: 2em;
}
.chatBox.recipient{
    margin-left: 2em;
}
.chatBox.sender{
    align-self: end;
    margin-right: 2em;
    border: 2px solid var(--color-three);
}
.chatBox.sender p{
    color: white;

}
.chatBox{
    background-color: #222222;
    width: fit-content;
    max-width: 50%;
    height: fit-content;
    margin-top: 2em;
    padding: 1em;
    border-radius: 1em;
    border: 2px solid #b9b9b9;
}
.chatBox p{
    margin: 0;
}
.chatChoice{
    border: 2px solid var(--color-three);
    border-radius: 1em;
    padding: 0.5em 1em;
    width: 25%;
}
.chatChoice p {
    margin: 0px;
    color: white;
    font-size: 1em;
}
 contacts{
    display: flex;
    flex-direction: column;
    width: 35%;

    background-color: transparent;
    border-right: 3px solid #b7b7b7;
}
.loading{
  border: 8px solid #2e2e2e; /* Light grey */
  border-top: 8px solid var(--color-three); /* Blue */
  border-radius: 50%;
  width: 40px;
  height: 40px;
  margin: auto;
  animation: spin 0.7s linear infinite;
}
.textbox{
    margin: auto;
    width: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 800px;
}
.textbox p:not(.hidden){
    white-space: nowrap;
    overflow: hidden;
}
.hidden{
    display: none;
}
.correct text{
    color: hsl(120deg 100% 62.54%);
}
.red text{
    color: hsl(0, 100%, 59%);
}
error{
    color: hsl(0, 100%, 59%) !important;
}
normal{
    color: inherit;
    font-family: auto;
}
@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}
@keyframes showInbox{
    0%{

        height: 0px;
    }
    100%{
        height: 800px;

    }
}
@keyframes typewriter{
    0%{
        width: 0px;
    }
    100%{
        width: 100%;
        border-width: 0px;
    }
}
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: #fefefe; }
}

